Actualizar comentarios en platformio.ini para mayor claridad

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,10 @@ monitor_filters = esp32_exception_decoder
 board_build.arduino.memory_type = qio_opi  ; Para PSRAM y flash óptimo
 board_build.flash_mode = qio
 board_build.psram_type = opi
-board_build.partitions = partitions.csv    ; Tu CSV con OTA slots
-board_build.filesystem = littlefs          ; Filesystem por defecto (mejor que SPIFFS)
-board_upload.flash_size = 16MB             ; Fuerza detección 16MB (fix error)
-board_upload.maximum_size = 16777216       ; 16MB en bytes
+board_build.partitions = partitions.csv
+board_build.filesystem = littlefs          ; Filesystem por defecto
+board_upload.flash_size = 16MB             ; Para XMB de flash
+board_upload.maximum_size = 16777216       ; La cantidad maxima total -> 16MB
 board_upload.offset_address = 0x10000     ; Offset de app0
 build_flags =
   -DBOARD_HAS_PSRAM                        ; Habilita PSRAM si disponible
@@ -20,7 +20,7 @@ lib_deps = adafruit/Adafruit NeoPixel@^1.15.1
 [env:esp32s3-ota]
 extends = env:esp32s3-usb
 upload_protocol = espota                   ; Protocolo OTA
-upload_port = esp32s3-ota.local            ; Cambia a la IP real de tu ESP32-S3 (ver Serial)
+upload_port = esp32s3-ota.local            ; Cambia por IP o hostname.local
 upload_flags = 
     --auth=12345678                        ; Password OTA
 lib_deps = adafruit/Adafruit NeoPixel@^1.15.1
