Refactor configuración de OTA y mejorar la conexión WiFi en main.cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,26 +1,42 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32s3-usb]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-board_build.arduino.memory_type = qio_opi  ; Para PSRAM y flash óptimo
+board_build.arduino.memory_type = qio_opi
 board_build.flash_mode = qio
 board_build.psram_type = opi
 board_build.partitions = partitions.csv
-board_build.filesystem = littlefs          ; Filesystem por defecto
-board_upload.flash_size = 16MB             ; Para XMB de flash
-board_upload.maximum_size = 16777216       ; La cantidad maxima total -> 16MB
-board_upload.offset_address = 0x10000     ; Offset de app0
-build_flags =
-  -DBOARD_HAS_PSRAM                        ; Habilita PSRAM si disponible
-  -DOTA_HOSTNAME=\"esp32s3-ota\"           ; Hostname para OTA
-lib_deps = adafruit/Adafruit NeoPixel@^1.15.1
+board_build.filesystem = littlefs
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
+board_upload.offset_address = 0x10000
+build_flags = 
+	-DBOARD_HAS_PSRAM
+	-DOTA_HOSTNAME=\"esp32s3-ota\"
+  -DELEGANTOTA_USE_ASYNC_WEBSERVER=1 ; Usar servidor asíncrono
+  
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.15.1
+	ayushsharma82/ElegantOTA@^3.1.7
 
 [env:esp32s3-ota]
 extends = env:esp32s3-usb
-upload_protocol = espota                   ; Protocolo OTA
-upload_port = esp32s3-ota.local            ; Cambia por IP o hostname.local
+upload_protocol = espota
+upload_port = esp32s3-ota.local
 upload_flags = 
-    --auth=12345678                        ; Password OTA
-lib_deps = adafruit/Adafruit NeoPixel@^1.15.1
+	--auth=12345678
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.15.1
+	ayushsharma82/ElegantOTA@^3.1.7
